<resources>
    <string name="app_name">Reservations</string>
    <string name="title_home">Home</string>
    <string name="title_search">Research</string>
    <string name="title_alert">Alerts</string>
    <string name="title_departure">Departure city</string>
    <string name="title_arrival">Arrival city</string>
    <string name="title_date">Date</string>
    <string name="title_time">From</string>
    <string name="title_time_start">Between</string>
    <string name="title_time_end">And</string>
    <string name="title_create_alert">Create alert</string>
    <string name="title_valid_search">validate search</string>
    <string name="title_receive_alert">Receive alert</string>
    <string name="title_history">History</string>
    <string name="title_result">Results</string>
    <string name="title_email">Email</string>
    <string name="email_invalid">Invalid email</string>
    <string name="required">Required</string>
    <string name="lbl_alert_created">Alert created !</string>
</resources>
